--- a/Class.html
+++ b/Class.html
@@ -16,6 +16,7 @@
     </ol>
     <p>
         <ul>
+            <li>Eagle</li>
             <li>Parrot</li>
             <li>Peacock</li>
             <li>Owl</li>
