--- a/CSS/Classwork2.html
+++ b/CSS/Classwork2.html
@@ -36,9 +36,13 @@
         }   
     </style>
     <div class="margin">
+        Margin
         <div class="border">
+            Border
             <div class="middle-border">
+                Middle-Border
                 <div class="padding">
+                    Padding
                     <div class="content">
                         Content
                     </div>
