--- a/CSS/Homework3.html
+++ b/CSS/Homework3.html
@@ -41,7 +41,7 @@
         Hooters
     </h3>
     <p class="wings">Wings Always Wins</p>
-    <table class="menu" border="1px">
+    <table class="menu">
         <tr>
             <th>Menu</th>
             <th>Price</th>
