--- a/CSS/Dummy2.html
+++ b/CSS/Dummy2.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<style>
-div.sticky {
-  position: sticky;
-  top: 0;
-  padding: 5px;
-  background-color: #cae8ca;
-  border: 2px solid #4CAF50;
+<style> 
+#rcorners1 {
+  border-radius: 10px 5px 2em / 20px 25px 30%;
+  background: #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;
+  font-size: 20px;  
 }
+
+#rcorners2 {
+  border-radius: 50px;
+  border: 2px solid #73AD21;
+  padding: 20px; 
+  width: 200px;
+  height: 150px;  
+}
+
 </style>
 </head>
 <body>
 
-<p>Try to <b>scroll</b> inside this frame to understand how sticky positioning works.</p>
-<p>Note: IE/Edge 15 and earlier versions do not support sticky position.</p>
+<h1>The border-radius Property</h1>
 
-<div class="sticky">I am sticky!</div>
-
-<div style="padding-bottom:2000px">
-  <p>In this example, the sticky element sticks to the top of the page (top: 0), when you reach its scroll position.</p>
-  <p>Scroll back up to remove the stickyness.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-  <p>Some text to enable scrolling.. Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
-</div>
+<p>Rounded corners for an element with a specified background color:</p>
+<p id="rcorners1">Rounded corners!</p>
+<p>Rounded corners for an element with a border:</p>
+<p id="rcorners2">Rounded corners!</p>
 
 </body>
 </html>
