--- a/BOOTSTRAP/Homework2.html
+++ b/BOOTSTRAP/Homework2.html
@@ -20,7 +20,9 @@
         <li>Integrity</li>
         <li>Innovation</li>
     </ul>
-    <img src="https://blogimage.vantagecircle.com/content/images/2020/08/teamwork-and-team-building.png" alt="Team Pic" class="rounded-circle mx-auto d-block" width="150px" height="150px">
+    <div>
+        <img src="https://blogimage.vantagecircle.com/content/images/2020/08/teamwork-and-team-building.png" alt="Team Pic" class="rounded-circle mx-auto d-block my-5" width="200px" height="200px">
+    </div>
     <table class="table table-bordered text-center">
         <tr>
             <th>Name</th>
