--- a/BOOTSTRAP/Dummy.html
+++ b/BOOTSTRAP/Dummy.html
@@ -4,26 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
-  <style>
-    table{
-        text-align: center;
-    }
-  </style>
 </head>
 <body>
-    <table class="table table-bordered table-striped">
-        <tr>
-            <th>Name</th>
-            <th>Role</th>
-        </tr>
-        <tr>
-            <td>John Doe</td>
-            <td>Software Engineer</td>
-        </tr>
-    </table>
+    <span style="background-color: yellow; width: 500px; height: 300px; display: inline-block;">Welcome</span>
+    <button type = "button" class = "btn btn-info">
+        Inbox<sup class = "badge badge-light">19</sup>
+</button>
 </body>
 </html>
