--- a/BOOTSTRAP/Homework4.html
+++ b/BOOTSTRAP/Homework4.html
@@ -20,6 +20,14 @@
                 <p class="card-text">A stylish smartwatch with fitness tracking and notifications.</p>
                 <a href="#" class="btn btn-link">Read More</a>
             </div>
+            <div class ="dropdown text-center">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Options</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Add to Wishlist</a>
+                    <a class="dropdown-item" href="#">Compare</a>
+                    <a class="dropdown-item" href="#">Report</a>
+                </div>
+            </div>
         </div>
         <div class="card">
             <h4 class="card-title text-center">Wireless Headphones</h4>
@@ -27,6 +35,14 @@
                 <img src="https://www.apple.com/newsroom/images/product/airpods/standard/apple_airpods-max_hero_12082020_big.jpg.large.jpg" alt="Smart Watch" style="width: 180px;" class="card-img-top img-fluid">
                 <p class="card-text">High-quality sound with noise cancellation technology.</p>
                 <a href="#" class="btn btn-link">Read More</a>
+            </div>
+            <div class ="dropdown text-center">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Options</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Add to Wishlist</a>
+                    <a class="dropdown-item" href="#">Compare</a>
+                    <a class="dropdown-item" href="#">Report</a>
+                </div>
             </div>
         </div>
         <div class="card">
@@ -36,7 +52,59 @@
                 <p class="card-text">Portable speaker with deep bass and long battery life.</p>
                 <a href="#" class="btn btn-link">Read More</a>
             </div>
+            <div class ="dropdown text-center">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Options</button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" href="#">Add to Wishlist</a>
+                    <a class="dropdown-item" href="#">Compare</a>
+                    <a class="dropdown-item" href="#">Report</a>
+                </div>
+            </div>
         </div>
+    </div>
+    
+    <h3 class="text-center mt-5 mb-3">Product FAQs</h3>
+
+    <div id="accordian">
+        <div class="card">
+            <div class="card-header">
+                <a class="card-link" data-toggle="collapse" href="#faq1">
+                    What is the warranty period?
+                </a>
+            </div>
+            <div id="faq1" class="collapse" data-parent="#accordian">
+                <div class="card-body">
+                    All products come with a 1-year manufacturer warranty.
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <a class="collapsed card-link" data-toggle="collapse" href="#faq2">
+                    Do you offer free shipping?
+                </a>
+            </div>
+            <div id="faq2" class="collapse" data-parent="#accordian">
+                <div class="card-body">
+                    Yes, we provide free shipping on all orders above $50.
+                </div>
+            </div>
+        </div>
+
+        <div class="card">
+            <div class="card-header">
+                <a class="collapsed card-link" data-toggle="collapse" href="#faq3">
+                    Can I return the product?
+                </a>
+            </div>
+            <div id="faq3" class="collapse" data-parent="#accordian">
+                <div class="card-body">
+                    Returns are accepted within 30 days of purchase.
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
 </body>
