--- a/CSS Exam/Login.html
+++ b/CSS Exam/Login.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Form</title>
     <style>
+        *{
+            box-sizing: border-box;
+        }
         html, body{
             height: 100%;
             margin: 0;
